Overflow-x bug fixed

--- a/app/styles/_article.scss
+++ b/app/styles/_article.scss
@@ -53,7 +53,7 @@ article {
       letter-spacing: -0.8px;
       color: #12112e;
       opacity: 0.67;
-      margin-bottom: 0 0 2px 0;
+      margin: 0 0 2px 0;
       padding-left: 3px;
       text-transform: uppercase;
     }
