--- a/app/styles/all.scss
+++ b/app/styles/all.scss
@@ -1,3 +1,10 @@
+body {
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 @import 'fonts';
 @import 'header';
 @import 'aside';
